Footer fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -487,4 +487,7 @@ a {
     display: -ms-flexbox;
     display: flex;
   }
+  .copyright {
+    visibility: hidden;
+  }
 }
