--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -83,4 +83,8 @@
   .logo {
     display: flex;
   }
+
+  .copyright {
+    visibility: hidden;
+  }
 }
